# IIend_harness

./: .env.example  .gitignore  CLAUDE.md  SESSION_SUMMARY.md  check_data.csv  debug_data_check.csv  pricing_analysis_iphone15.csv  pyproject.toml  test.csv
docs/specs/: 001-message-protocol-runtime-core.md  002-skill-format-registry.md  003-responder-agent-conversation-module.md  004-orchestrator-logic.md  005-executor-reviewer-cli.md  006-testing.md
llend/: __init__.py  __main__.py  settings.toml
llend/executor/: __init__.py  agent.py
llend/llm/: __init__.py  client.py
llend/orchestrator/: __init__.py  adjudicator.py  agent.py  classifier.py  config.py  executor.py  gate.py  progress.py  recovery.py  session.py  summarizer.py  wiring.py
llend/parsers/: __init__.py  csv_exporter.py  html_parser.py  web_fetcher.py
llend/registry/: __init__.py  action_dispatcher.py  models.py  parser.py  pipeline.py  registry.py  validator.py
llend/responder/: __init__.py  agent.py  context.py  memory.py  persona.py  stream.py
llend/reviewer/: __init__.py  agent.py
llend/runtime/: __init__.py  asyncio_runtime.py  base.py  checkpoint.py  langgraph_runtime.py  lifecycle.py  message.py  notifications.py
llend/tool_bridge/: __init__.py  bridge.py  mappings.toml
llend_harness/: __init__.py
output/: artifacts.json  synthesis.md
tests/: __init__.py  test_checkpoint.py  test_lifecycle.py  test_message.py  test_notifications.py  test_parser.py  test_pipeline.py  test_registry.py  test_responder_agent.py  test_responder_models.py  test_runtime.py  test_tool_bridge.py
(+13 files in other folders)
